# ratelimit-hint

./: ACCEPTANCE.md  README.md  docs_DESIGN.md  docs_PLAN.md  pyproject.toml
.github/workflows/: ci.yml
src/ratelimit_hint/: __init__.py  core.py
tests/: test_core.py
