[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ratelimit-hint"
version = "0.1.0"
description = "Tiny Python helpers to compute retry delays from HTTP rate-limit headers."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
  { name = "MartiAble", email = "MartiAble@users.noreply.github.com" }
]
keywords = ["http", "rate-limit", "retry-after", "api", "backoff"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Internet :: WWW/HTTP",
  "Topic :: Software Development :: Libraries :: Python Modules"
]

[project.urls]
Homepage = "https://github.com/MartiAble/ratelimit-hint"
Repository = "https://github.com/MartiAble/ratelimit-hint"
Issues = "https://github.com/MartiAble/ratelimit-hint/issues"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
